--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,7 +1,14 @@
-header{
-    
+/* Colocar fonte */
+/* Formatar botoes */
+@font-face {
+    font-family: "Reem";
+    src: url(../font/Reem_Kufi_Fun/ReemKufiFun-VariableFont_wght.ttf);
 }
 
+header{
+    font-family: "Reem";
+    word-spacing: 4px;
+}
 
 header .barra-sup{
     /* width: 100vw; */
@@ -18,22 +25,37 @@ header .titulo-container{
     display: flex;
     height: 3.5rem;
     align-items: center;
+    padding: 0.2rem;
 }
 header .logo{
     padding: 0;
     margin: 0;
-    height: 3.5rem;
+    height: 3rem;
 }
 header .titulo {
-    /* background-color: red; */
     margin: 0rem 1rem;
     align-items: center;
 }
 
 header .btns{
     display: flex;
-    /* background-color: blue; */
-    padding-left: 3rem;
+    padding-left: 1rem;
+}
+
+header button {
+    font-size: 9pt;
+    font-weight: 600;
+    margin: 0 0.3rem;
+    width: 4.8rem;
+    height: 2.5rem;
+    background-color: #2c7b66;
+    /* background-color: #4ACAA8; */
+    /* background-color: rgb(70, 70, 70); */
+    /* background: linear-gradient(to bottom, black, gray, black ); */
+    color: white;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 3px 3px 5px rgb(0, 0, 0);
 }
 
 header .hamb-icon-container{
@@ -42,30 +64,25 @@ header .hamb-icon-container{
 }
 
 header .hamb-icon{
-
     height: 2rem;
 }
 
-header button{
-    /* width: 7rem; */
-    height: 2.5rem;
-
-
-
-}
 
 
 
 
 
-/* Estilos para telas com no máximo 1250px*/
-@media (max-width: 1250px) {
+
+/* Estilos para telas com no máximo 1100px*/
+@media (max-width: 1100px) {
     header .titulo {
         visibility: hidden;
         position: absolute;
     }
+    header .barra-sup {
+        justify-content: space-between;
+    }
 }
-
 
 
 /* Estilos para telas com no máximo 768px*/
@@ -96,11 +113,11 @@ header button{
 /* Estilos para telas com no máximo 580px*/
 @media (max-width: 580px) {
     header .barra-sup {
-
+        
     }
     header .titulo {
         visibility: hidden;
         position: absolute;
     }
-    
+
 }
