--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,12 +3,15 @@
     src: url(../font/Reem_Kufi_Fun/ReemKufiFun-VariableFont_wght.ttf);
 }
 
+
+
 body {
     font-family: "Reem";
     display: flex;
     flex-direction: column;
     min-height: 100vh;
     background-color: #2c7b66;
+
 }
 
 main {
@@ -16,28 +19,68 @@ main {
     background-color: white;
     color: #777;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    
 }
 
-.sec-princ {
+
+
+
+.sobre-proj {
+    flex-direction: column;
     padding: 2rem;
-    overflow-y: auto;
 }
+
 
 .content {
     padding: 2rem;
-    overflow-y: auto;
 }
+
+.apenas-desktop {
+    visibility: hidden;
+    position: absolute;
+}
+
+.recurso-container{
+    display: flex;
+}
+
+.recurso-container .img-container{
+    float: right;
+}
+
+.recurso-container img{
+    height: 10rem;
+    width: 15rem;
+    max-width: 35vw;
+    padding-right: 1rem;
+}
+.recurso-descricao{
+    padding-left: 1rem;
+    max-height: 10rem;
+    overflow: hidden;
+}
+
+
+
+
+
+
+
 
 
 main ul {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    align-items: flex-start;
     padding-right: 5vw;
 }
 
 main ul li {
     min-width: 33vw;
+    flex: 1;
 }
 
 main ul li img {
@@ -60,17 +103,20 @@ main h1{
 main h2{
     color: #003f3cab;
     font-size: 21pt;
-    padding: 1rem 0;}
+    padding: 1rem 0;
+}
 
 main h3{
     color: #003f3cab;
     font-size: 17pt;
-    padding: 1rem 0;}
+    padding: 1rem 0;
+}
 
 main h4{
     color: #003f3cab;
     font-size: 14pt;
-    padding: 1rem 0;}
+    padding: 1rem 0;
+}
 
 
 main h5{
@@ -102,19 +148,31 @@ main p{
     font-weight: 600;
 }
 
+
+
+
+
 @media (min-width: 1100px) {
     main {
-
         display: grid;
         grid-template-columns: 35% 65%;
         grid-template-rows: 1fr;
     }
 
+    .apenas-desktop {
+        visibility: visible;
+        position: inherit;
+    }
+
+
+
+
+
     main ul li {
         min-width: 20vw;
     }
 
-    .sec-princ {
+    .sobre-proj {
         /* background-image: linear-gradient(to bottom, white, #2c7b66, white); */
         background-color: #3ca488;
         /* background-image: linear-gradient(to right, #2c7b66, #2c7b66, black); */
@@ -125,12 +183,12 @@ main p{
         box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
     }
     
-    .sec-princ p{
+    .sobre-proj p{
         color: white;
         text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.7);
     }
 
-    .sec-princ h1 {
+    .sobre-proj h1 {
         font-size: 32pt;
         padding: 1rem 0;
         color: #00282685;
@@ -140,6 +198,8 @@ main p{
         background-clip: text; */
 
     }
+
+
 
 
 
