--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -3,8 +3,59 @@ footer{
     color: white;
     /* position: sticky; */
     /* bottom: 0; */
-    padding: 2rem;
+    /* padding: 2rem; */
     background-color: #222;
     /* background-color: black; */
     /* border-top: solid 1px white; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* align-items: center; */
+}
+
+.footer-content{
+    display: flex;
+    /* flex: 1; */
+    width: calc(100% - 4rem);
+    justify-content: space-around;
+    padding: 2rem;
+    /* background-color: blue; */
+}
+
+.sec-ft{
+    /* background-color: blue; */
+    width: 30%;
+    text-align: center;
+}
+
+.copyright{
+    padding: 1rem;
+}
+
+@media (min-width: 1600px) {
+    .footer-content {
+        width: 1500px;
+        /* background-color: red; */
+    }
+}
+
+@media (max-width: 768px) {
+    .footer-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .sec-ft{
+        padding: 1rem;
+    }
+    #sec-1{
+        order: 1;
+    }
+    #sec-2{
+        order: 2;
+    }
+    #sec-3{
+        order: 3;
+    }
 }
