--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -343,8 +343,22 @@ header .titulo-dir{
         font-size: 10pt;
         font-weight: 600;
         height: 2.5rem;
-        background-color: #2c7b66;
-        border-radius: 0px;
+        /* background: linear-gradient(to bottom, #4acaa850, #2c7b6650); */
+        /* background: rgba(0, 0, 0, 0.3); */
+        background: transparent;
+        border-radius: 0rem;
+        border-bottom: #4ACAA875 solid 1px;
+        /* border-top: black solid 1px; */
+        /* color: #; */
+        /* padding-left: 3rem; */
+        /* text-align: center; */
+        box-shadow: none;
+        /* text-decoration: underline; */
+        /* line-height: 20rem; */
+
+        display: flex;
+        align-items: end;
+        justify-content: center;
         margin: 2px 0;
         text-align: left;
     }
