--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -147,18 +147,22 @@ header .logo{
 header .titulo-barra{
     margin: 0rem 1rem;
     align-items: center;
-    position: absolute;
-    visibility: hidden;
+
+    display: none;
+    /* position: absolute; */
+    /* visibility: hidden; */
 }
 
 header .titulo-barra-longo {
-    position: absolute;
-    visibility: hidden;
+    display: none;
+    /* position: absolute; */
+    /* visibility: hidden; */
 }
 
 header .titulo-barra-curto {
-    position: absolute;
-    visibility: hidden;
+    /* position: absolute; */
+    /* visibility: hidden; */
+    display: none;
 }
 
 header h2 {
@@ -197,7 +201,6 @@ header .btn-barra {
 /* MENU DOS BOTÕES */
 header .menu-btn {
     font-size: 9.5pt;
-    position: absolute;
     background-color: #222;
     top: 3.9rem;
     font-weight: 100;
@@ -206,7 +209,10 @@ header .menu-btn {
     flex-direction: column;
     width: 5.4rem;
     opacity: 80%;
-    visibility: hidden; /* usar no javascript para aparecer quando clicado */
+
+    display: none;
+    position: absolute;
+    /* visibility: hidden; usar no javascript para aparecer quando clicado */
 }
 header .menu-btn a{
     color: white;
@@ -219,8 +225,9 @@ header .menu-btn a{
 
 /* ICONE HAMBURGUER */
 header .hamb-icon-container{
-    position: absolute;
-    visibility: hidden;
+    display: none;
+    /* position: absolute; */
+    /* visibility: hidden; */
 }
 header .hamb-icon{
     height: 2rem;
@@ -297,8 +304,9 @@ header .titulo-dir{
 /* Estilos para telas com no máximo 1100px*/
 @media (max-width: 1100px) {
     header .titulo-barra{
-        visibility: hidden;
-        position: absolute;
+        /* visibility: hidden; */
+        /* position: absolute; */
+        display: none;
     }
     header .barra-sup {
         justify-content: space-around;
@@ -321,13 +329,12 @@ header .titulo-dir{
     }
 
     header .titulo-barra{
-        visibility: visible;
-        position: inherit;
+        display: inline;
+        /* visibility: visible; */
+        /* position: inherit; */
     }
 
     header .div-btns-barra {
-        /* visibility: hidden; */
-        position: absolute;
         right: 0;
         display: flex;
         flex-direction: column;
@@ -335,7 +342,9 @@ header .titulo-dir{
         background-color: #222222ee;
         padding: 0.5rem 1.5rem;
         border-top: black solid 2px;
-        visibility: hidden; /* usar no javascript para abrir o menu */
+        display: flex;
+        position: absolute;
+        /* visibility: hidden; usar no javascript para abrir o menu */
     }
 
     header .btn-barra{
@@ -365,11 +374,13 @@ header .titulo-dir{
 
     header .menu-btn{
         position: relative;
+        /* background-color: red; */
         top: auto;
         background-color: transparent;
         width: 10rem;
         padding: 0 1rem;
-        visibility: hidden; /* usar no javascript para abrir o menu */
+        display: none;
+        /* visibility: hidden; usar no javascript para abrir o menu */
     }
     
     header .menu-btn :last-child{
@@ -381,8 +392,9 @@ header .titulo-dir{
     }
 
     header .hamb-icon-container {
-        position: inherit;
-        visibility: visible;
+        display: inline;
+        /* position: inherit; */
+        /* visibility: visible; */
         height: 2rem;
     }
 
@@ -391,57 +403,46 @@ header .titulo-dir{
     }
 
     header .banner-container{
-        position: absolute;
-        visibility: hidden;
+        display: none;
+        /* position: absolute; */
+        /* visibility: hidden; */
     }
     header #banner{
-        visibility: hidden;
-        position: absolute;
+        display: none;
+        /* visibility: hidden; */
+        /* position: absolute; */
     }
     header #banner-txt{
-        visibility: hidden;
+        display: none;
+        /* visibility: hidden; */
     }
 
     header .titulo-barra-longo {
-        position: inherit;
-        visibility: visible;
+        display: inline;
+        /* position: inherit; */
+        /* visibility: visible; */
     }
 
 }
 
 
 
-
-
 /* Estilos para telas com no máximo 580px*/
-@media (max-width: 660px) {
-    header .barra-sup {
-        height: 6rem;
-    }
-    header .titulo-barra{
-        /* display: flex; */
-        /* align-items: center; */
-        /* justify-content: center; */
-        /* flex: 1; */
-        /* background-color: red; */
-    }
-
-    header .titulo-container{
-        display: flex;
-        /* justify-content: space-between; */
-        flex: 1;
-        /* padding-right: 30%; */
-        /* background-color: red; */
-    }
-
+@media (max-width: 670px) {
     header .titulo-barra-longo {
-        position: absolute;
-        visibility: hidden;
+        /* position: absolute; */
+        /* visibility: hidden; */
+        display: none;
     }
 
     header .titulo-barra-curto {
-        position: inherit;
-        visibility: visible;
+        display: inline;
+        /* position: inherit; */
+        /* visibility: visible; */
+    }
+
+    header h3{
+        font-size: 0.8rem;
     }
 }
 
