--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,42 +1,49 @@
 footer{
-    /* background-color: #2c7b66; */
     color: white;
-    /* position: sticky; */
-    /* bottom: 0; */
-    /* padding: 2rem; */
     background-color: #222;
-    /* background-color: black; */
-    /* border-top: solid 1px white; */
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* align-items: center; */
 }
 
 .footer-content{
     display: flex;
-    /* flex: 1; */
     width: calc(100% - 4rem);
     justify-content: space-around;
     padding: 2rem;
-    /* background-color: blue; */
 }
 
 .sec-ft{
-    /* background-color: blue; */
-    width: 30%;
     text-align: center;
+    overflow: hidden;
+    /* padding: 0 2rem; */
+    /* border: solid 1px red; */
+}
+
+.sec-ft p{
+    padding-bottom: 0.5rem;
+    padding-left: 2rem;
+    text-align: left;
 }
 
 .copyright{
-    padding: 1rem;
+    padding-bottom: 0.75rem;
+    font-size: 0.7rem;
+    /* display: flex; */
+    /* flex: 1; */
+    /* width: 100%; */
+    /* background-color: red; */
+}
+
+#sec-1 img{
+    width: 3rem;
+    padding: 0.75rem;
 }
 
 @media (min-width: 1600px) {
     .footer-content {
         width: 1500px;
-        /* background-color: red; */
     }
 }
 
@@ -46,8 +53,14 @@ footer{
         flex-direction: column;
         align-items: center;
     }
+
+    .sec-ft p{
+        text-align: center;
+        padding-left: 0;
+    }
     .sec-ft{
-        padding: 1rem;
+        padding: 1rem 0;
+        width: 100%;
     }
     #sec-1{
         order: 1;
