--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -128,6 +128,12 @@ main ul li {
 
 main ul li img {
     height: 2rem;
+    width: 2rem;
+    padding: 0.2rem;
+    border-radius: 50%;
+    box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.75);
+    /* border: solid 1px red; */
+    background-color: rgba(255, 255, 255, 0.519);
     /* margin: 0 1rem; */
 }
 
