correção de bug na exibição do menu em telas estreitas

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -342,7 +342,7 @@ header .titulo-dir{
         background-color: #222222ee;
         padding: 0.5rem 1.5rem;
         border-top: black solid 2px;
-        display: flex;
+        display: none;
         position: absolute;
         /* visibility: hidden; usar no javascript para abrir o menu */
     }
