--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,10 +1,16 @@
 footer{
     color: white;
     background-color: #222;
+    /* background-image: linear-gradient(to left, #000, #222, #000); */
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+a{
+    text-decoration: none;
+    color: white;
 }
 
 .footer-content{
@@ -38,7 +44,37 @@ footer{
 
 #sec-1 img{
     width: 3rem;
-    padding: 0.75rem;
+    background-color: white;
+    border-radius: 50%;
+    padding: 0.17rem;
+    box-shadow: 5px 5px 5px black;  
+}
+
+#sec-1{
+    display: flex;
+    height: 100%;
+    justify-content: center;
+}
+#sec-1 a{
+    /* background-color: red; */
+    border-radius: 50%;
+    /* display: flex; */
+    margin: 0.75rem;
+    /* flex-direction: row; */
+    /* flex-wrap: wrap; */
+    /* padding: 0; */
+    /* flex-direction: column; */
+
+}
+#sec-3 iframe{
+}
+#sec-3{
+    border: solid 0.2rem white;
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px black;
+    width: fit-content;
+    /* background-color: red; */
+    /* height: fit-content; */
 }
 
 @media (min-width: 1600px) {
@@ -59,7 +95,7 @@ footer{
         padding-left: 0;
     }
     .sec-ft{
-        padding: 1rem 0;
+        margin: 1rem 0;
         width: 100%;
     }
     #sec-1{
