--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,9 +22,6 @@ main {
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    /* justify-content: space-evenly; */
-    /* background-color: rebeccapurple;  */
-    /* background-color: #002321; */
     background-color: white;
 }
 
@@ -59,7 +56,12 @@ main {
 .recurso-container img{
     height: 10rem;
     width: 15rem;
-    padding-right: 1rem;
+    margin-right: 1rem;
+    border-radius: 1rem;
+    /* background-color: black; */
+    box-shadow: 3px 3px 5px black;
+    padding: 0.3rem;   
+    /* border: solid 1px black; */ */
 }
 
 
@@ -68,20 +70,6 @@ main {
     max-height: 10rem;
     overflow: auto;
     margin-bottom: 1rem;
-
-    /*  */
-    /* height: 140px;     */
-
-    /*  */
-    /* scrollbar-width: thin; */
-        /* Largura da barra de rolagem */
-    /* scrollbar-color: #763535 #111e98; */
-        /* Cor do indicador e da trilha da barra de rolagem */
-    /* scrollbar-face-color: #611212; */
-            /* Cor do indicador da barra de rolagem no IE */
-    /* scrollbar-track-color: #139d3e; */
-        /* Cor da trilha da barra de rolagem no IE */
-
 }
 
 main ::-webkit-scrollbar {
@@ -312,9 +300,9 @@ main p{
         grid-template-rows: 1fr;
     } */
     main{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
+        /* display: flex; */
+        /* flex-direction: row; */
+        /* justify-content: center; */
     }
 
     .sobre-proj{
